[gd_scene load_steps=11 format=3 uid="uid://bx0l5b5fqhk0l"]

[ext_resource type="Script" path="res://Munchme/Munchme.gd" id="1_ygrta"]
[ext_resource type="Texture2D" uid="uid://b4dick7xt0bw2" path="res://Sprites/catch_text.png" id="2_dgq12"]
[ext_resource type="Texture2D" uid="uid://8lob40dnypeu" path="res://Sprites/catch_border.png" id="3_ni207"]
[ext_resource type="PackedScene" uid="uid://cdumv0t8swix3" path="res://Movement/overworld_movement.tscn" id="4_xu18s"]
[ext_resource type="PackedScene" uid="uid://bcaj1ogqexsb7" path="res://Movement/float_movement.tscn" id="5_fqq42"]
[ext_resource type="PackedScene" uid="uid://dco60ny2ql34u" path="res://Movement/ai_movement.tscn" id="6_bjn2p"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_twlbo"]
height = 2.02097
radius = 1.9389

[sub_resource type="Animation" id="Animation_21jsc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextFront:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextBack:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_omket"]
resource_name = "pulsate"
length = 0.26
loop_mode = 1
step = 0.13
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13, 0.26),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.115, 1.115, 1.115), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextFront:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.13, 0.26),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.854902, 0.564706, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextBack:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.13, 0.26),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.854902, 0.564706, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ys37"]
_data = {
"RESET": SubResource("Animation_21jsc"),
"pulsate": SubResource("Animation_omket")
}

[node name="Munchme" type="CharacterBody3D"]
collision_layer = 8
collision_mask = 5
floor_block_on_wall = false
floor_max_angle = 0.959931
script = ExtResource("1_ygrta")

[node name="CatchArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="CatchArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.647009, 0)
shape = SubResource("CylinderShape3D_twlbo")

[node name="CatchText" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.09324, 0)
visible = false

[node name="TextFront" type="Sprite3D" parent="CatchText"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.005)
pixel_size = 0.005
billboard = 1
no_depth_test = true
texture = ExtResource("2_dgq12")

[node name="TextBack" type="Sprite3D" parent="CatchText"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.005)
pixel_size = 0.005
billboard = 1
no_depth_test = true
texture = ExtResource("2_dgq12")

[node name="Border" type="Sprite3D" parent="CatchText"]
pixel_size = 0.005
billboard = 1
no_depth_test = true
texture = ExtResource("3_ni207")

[node name="Animation" type="AnimationPlayer" parent="CatchText"]
libraries = {
"": SubResource("AnimationLibrary_4ys37")
}
autoplay = "pulsate"

[node name="OverworldMovement" parent="." instance=ExtResource("4_xu18s")]
spherical_gravity = false
target_path = NodePath("..")
float_node_path = NodePath("../FloatMovement")

[node name="FloatMovement" parent="." instance=ExtResource("5_fqq42")]
target_path = NodePath("..")
float_force = 20.0

[node name="AiMovement" parent="." instance=ExtResource("6_bjn2p")]

[node name="StepPlayer" type="AudioStreamPlayer3D" parent="."]
max_distance = 50.0
max_polyphony = 2
panning_strength = 0.2
bus = &"Effects"
attenuation_filter_db = 0.0

[connection signal="body_entered" from="CatchArea" to="." method="_on_catch_area_body_entered"]
[connection signal="body_exited" from="CatchArea" to="." method="_on_catch_area_body_exited"]
